controllers/refresolver/gatewayapitcproute/testdata/gatewayapi_tcproute_backend_with_namespace.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: gatewayapi-tcproute
  namespace: test-gslb
spec:
  parentRefs:
  - name: gatewayapi-gateway
  rules:
  - backendRefs:
    - name: gatewayapi-tcproute-service
      namespace: test-backend
      port: 8080
