controllers/refresolver/gatewayapitcproute/testdata/gatewayapi_tcproute_multiple_backendrefs.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: gatewayapi-tcproute
  namespace: test-gslb
spec:
  parentRefs:
  - name: gatewayapi-gateway
  rules:
  - backendRefs:
    - name: gatewayapi-tcproute-service1
      port: 8080
  - backendRefs:
    - name: gatewayapi-tcproute-service2
      port: 8080
